# spotoptim

./: .flake8  .gitignore  .nojekyll  .pre-commit-config.yaml  .releaserc.json  404.html  CHANGELOG.md  CONTRIBUTING.md  DETERMINISTIC_TESTS.md  DOCSTRING_CONVERSION.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PARALLELIZATION_STRATEGY.md  POINT_SELECTION_IMPLEMENTATION.md  README.md  REUSE.toml  TENSORBOARD.md  TENSORBOARD_CLEAN_FEATURE.md  _quarto.yml  check_links.py  demo_multiobjective.py  demo_ocba.py  demo_refactor.py  demo_tensorboard.py  example_clean.py  generated_sections.yml  index.html  makefile.sh  mkdocs.yml  objects.inv  pyproject.toml  reorder_spotoptim.py  repro_factor_display.py  repro_isfinite.py  repro_issue.py  repro_precision.py  reproduce_issue.py  reproduce_repr.py  requirements-docs.txt  robots.txt  (+13 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  docs.yml  quarto-build.yml  release-preflight.yml  release.yml  scorecard.yml  sync-develop.yml  test.yml
TODO/: INSTRUCTOR_GUIDE.md
_inv/: numpy_objects.json  pandas_objects.json  python_objects.json
about/: index.html
bart25r_manuals/: _quarto.yml  index.qmd
bart25r_manuals/docs/: about.html  index.html  search.json  sitemap.xml
bart26g/: _quarto.yml  arxiv.sty  bart26g.bib  index.qmd  pyproject.toml  steady-state.dot
bart26g/arxiv_submission/: index.tex
docs/: KRIGING_INTEGRATION.md  MULTIOBJECTIVE.md  PLOT_SURROGATE.md  PLOT_SURROGATE_SUMMARY.md  VAR_TYPE_IMPLEMENTATION.md  about.qmd  download.html  download.qmd  early-stopping.html  early-stopping.qmd  examples.html  examples.qmd  gen_ref_pages.py  index.html  index.md  index.qmd  interlinks.lua  optimize_parallel.html  optimize_parallel.qmd  optimize_seq.html  optimize_seq.qmd  quartodoc_build.py  reproducibility.html  sequential-parameter-optimization-cookbook.html  sequential-parameter-optimization-cookbook.qmd  slurm.html  slurm.qmd  spotoptim_class.html  spotoptim_class.qmd  spotoptim_examples.html  spotoptim_examples.qmd  spotoptim_init.html  spotoptim_init.qmd  table_methods.md  user_guide.html  user_guide.qmd
docs/ipynb/: acquisition_failure.ipynb  factor_variables.ipynb  plot_surrogate.ipynb  point_selection.ipynb  save_load.ipynb  success_rate.ipynb
docs/manuals/: acquisition_failure.md  diabetes_dataset.md  kriging.md  learning_rate_mapping.md  penalty_handling.md  plot_surrogate.md  point_selection.md  reproducibility.md  save_load.md  success_rate.md  tensorboard.md  tensorboard_clean.md  unified_learning_rate.md  var_type.md
docs/pinns/: bart25c_demo_1.ipynb  pinns_2_hyperparameter_tuning.ipynb
docs/qmd/: hyper.qmd  spot_hyper.qmd  spot_hyper2.qmd  spot_hyper3.html  spot_hyper3.qmd  spot_hyper4.html  spot_hyper4.qmd  spot_hyper5.qmd  spot_step_by_step.qmd
docs/reference/: SpotOptim.SpotOptim.html  SpotOptim.SpotOptimConfig.html  SpotOptim.SpotOptimState.html  SpotOptim.html  _sidebar.yml  core.data.SpotDataFromArray.html  core.data.SpotDataFromTorchDataset.html  core.data.SpotDataSet.html  core.data.html  core.experiment.ExperimentControl.html  core.experiment.html  core.html  data.base.Config.html  data.base.FileConfig.html  data.base.html  data.diabetes.DiabetesDataset.html  data.diabetes.get_diabetes_dataloaders.html  data.diabetes.html  data.html  data.manydataset.ManyToManyDataset.html  data.manydataset.ManyToOneDataset.html  data.manydataset.PadSequenceManyToMany.html  data.manydataset.PadSequenceManyToOne.html  data.manydataset.html  data.manydataset.load_pooled_sequence_data.html  data.manydataset.load_sequence_data.html  eda.html  eda.plots.html  eda.plots.plot_ip_boxplots.html  (+232 more)
download/: index.html
examples/: README.md  awwe.html  awwe.ipynb  awwe.qmd  awwe_optimization.py  demo_noisy_optimization.py  demo_tensorboard_clean.py  diabetes_dataset_example.py  dimension_reduction_example.py  example_multiobjective.py  factor_variable_optimization.py  index.html  plot_surrogate_demo.py  point_selection_example.py  table_methods_demo.py  termination_example.py  unified_learning_rate_demo.py  var_name_example.py
hyperparameter-tuning-cookbook/: index.html
ipynb/: diabetes_dataset.ipynb  kriging.ipynb  multiobjective.ipynb  reproducibility.ipynb  tensorboard.ipynb  tensorboard_clean.ipynb  var_type.ipynb
notebooks/: 01_sampling_plans_lhd.ipynb  02_constructing_surrogate.ipynb  03_exploring_exploiting.ipynb  04_visualization.ipynb  05_infill_criteria.ipynb  demos.ipynb  spotoptim_examples.ipynb  spotoptim_tests.ipynb
pinns/: pinns_1.html  pinns_2_hyperparameter_tuning.html
qmd/: hyper.html  hyper.qmd  spot_hyper.html  spot_hyper.qmd  spot_hyper2.qmd  spot_hyper3.qmd  spot_mini.qmd  spot_step_by_step.html  spot_step_by_step.qmd
remote/: client.py
scripts/: factor_kernel_benchmark.py  md_to_ipynb.sh
search/: search_index.json
sequential-parameter-optimization-cookbook/: index.html
table_methods/: index.html
test/: test_dummy.py
tests/: __init__.py  conftest.py  factor_analyzer_test_utils.py  test_ackley.py  test_acquisition_failure.py  test_acquisition_optimizer.py  test_acquisition_return_size.py  test_analytical_functions.py  test_apply_ocba_example.py  test_apply_penalty_na.py  test_apply_penalty_na_example.py  test_batch_eval.py  test_boundaries.py  test_budget_reproduction.py  test_calculate_outliers.py  test_cfa_examples.py  test_clustered.py  test_cookbook_examples.py  test_core_import_lean.py  test_de_x0_bounds.py  test_detect_var_type.py  test_determine_termination_example.py  test_deterministic.py  test_diabetes_dataset.py  test_dill_pickling.py  test_dimension_reduction.py  test_distance_metric.py  test_early_stopping.py  test_eda_plots_examples.py  test_eval.py  test_execute_optimization_run_example.py  test_experiment_control.py  test_factor_analyzer.py  test_factor_kernel_benchmark.py  test_factor_table_display.py  test_factor_variables.py  test_get_combinations.py  test_get_initial_design.py  test_gpr_minimize_wrapper_example.py  test_handle_default_var_trans.py  (+134 more)
tutorials/: mmphi_intensive.html  multi_objective_optimization.html  multi_objective_optimization.qmd
(+400 files in other folders)
