[project]
name = "spotoptim"
version = "0.0.190"
description = "Sequential Parameter Optimization Toolbox"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "bartzbeielstein", email = "32470350+bartzbeielstein@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24.3",
    "scipy>=1.10.1",
    "scikit-learn>=1.3.0",
    # MkDocs dependencies removed — documentation now uses Quarto + quartodoc.
    # Install doc-build tools via: pip install spotoptim[docs]
    # or: pip install -r requirements-docs.txt
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.1.0",
    "requests>=2.32.3",
    "torch>=2.9.1",
    "tensorboard>=2.20.0",
    "tabulate>=0.9.0",
    "xgboost>=3.1.1",
    "seaborn>=0.13.2",
    "spotdesirability>=0.0.1",
    "jupyter-cache>=1.0.1",
    "flake8>=7.3.0",
    "dill>=0.4.0",
    "statsmodels>=0.14.6",
    "pytest-cov>=7.0.0",
    "quartodoc>=0.11.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "safety>=3.0.0",
    "bandit>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "safety>=3.0.0",
    "bandit>=1.8.0",
]
docs = [
    # Quarto API documentation generator (replaces mkdocstrings)
    "quartodoc>=0.9.3",
    # Google-style docstring parser used by quartodoc
    "griffe>=1.7.3",
    # Quarto Jupyter integration
    "jupyter>=1.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::UserWarning:matplotlib",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

