[project]
name = "spotoptim"
version = "3.1.0"
description = "Sequential Parameter Optimization Toolbox"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
authors = [
    { name = "bartzbeielstein", email = "32470350+bartzbeielstein@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4",
    "scipy>=1.18",
    "scikit-learn>=1.8",
    "pandas>=3.0",
    "tabulate>=0.10",
    "dill>=0.4.1",
]

# Default-installed dev tooling (plain `uv sync`). The canonical dev command
# is `uv sync --extra dev`, whose `dev` extra additionally pulls the runtime
# extras (`spotoptim[all]`) and `spotdesirability` needed to run the full
# test suite — those cannot be expressed in a PEP 735 group.
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "bandit>=1.8.0",
    "pre-commit>=3.7.0",
    "ty>=0.0.29",
]

[project.optional-dependencies]
torch = [
    "torch>=2.9.1",
    "tensorboard>=2.20.0",
    "torchmetrics>=1.8.2",
]
viz = [
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
]
stats = [
    "statsmodels>=0.14.6",
]
remote = [
    "requests>=2.32.3",
]
all = [
    "spotoptim[torch,viz,stats,remote]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "bandit>=1.8.0",
    "pre-commit>=3.7.0",
    "ty>=0.0.29",
    "spotoptim[all]",
    "spotdesirability>=0.0.1",
]
docs = [
    # Quarto API documentation generator (replaces mkdocstrings)
    "quartodoc>=0.11.1",
    # Google-style docstring parser used by quartodoc
    "griffe>=1.7.3",
    # Quarto Jupyter integration
    "jupyter>=1.1.1",
    # Transitive dependencies for griffe CLI
    "colorama>=0.4.6",
    "importlib_metadata",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Keep slow-test timings visible on every run; the registry lives in tests/conftest.py.
addopts = ["--durations=15"]
# Safety net: no single test may hang the suite (e.g. a stuck network call).
# Provided by pytest-timeout (dev dependency).
timeout = 300
markers = [
    "slow: heavy end-to-end test; deselect with -m \"not slow\". Runs in nightly/full CI.",
]
filterwarnings = [
    "ignore::UserWarning:matplotlib",
]

[build-system]
requires = ["uv_build>=0.9.18"]
build-backend = "uv_build"

[tool.uv]
package = true

# PyTorch CPU-only index — used ONLY for torch to avoid pulling
# incompatible wheels for other packages (markupsafe, importlib-metadata, etc.)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/spotoptim"]

[tool.hatch.build]
include = ["src/spotoptim/datasets/*.csv"]

# ── Tooling baseline (roadmap #6): converge on the spot* standard ────────────
# Ruff replaces the removed legacy .flake8. Line length matches black; CI runs
# `ruff check` non-blocking.
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.black]
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = true
source = ["src/spotoptim"]

[tool.coverage.report]
# Ratchet: lock in the current ~71% fast-suite coverage so it cannot regress;
# 68 leaves margin for platform variance. Raise deliberately as coverage
# improves. The fast CI gate runs pytest with --cov, enforcing this.
fail_under = 68

# Astral `ty` type checker. Run non-blocking in CI (continue-on-error) so it
# surfaces type debt without failing the build; tighten to a gate later.
[tool.ty.environment]
python-version = "3.13"
